--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
+asn1crypto==0.22.0
 certifi==2017.4.17
+cffi==1.10.0
 chardet==3.0.4
 coreapi==2.3.1
 coreschema==0.0.4
+cryptography==1.9
 Django==1.11.3
 django-filter==1.0.4
 djangorestframework==3.6.3
+enum34==1.1.6
 idna==2.5
+ipaddress==1.0.18
 itypes==1.1.0
 Jinja2==2.9.6
 Markdown==2.6.8
 MarkupSafe==1.0
+pycparser==2.18
 Pygments==2.2.0
+pyOpenSSL==17.1.0
+pysolr==3.6.0
 pytz==2017.2
 requests==2.18.1
+six==1.10.0
 uritemplate==3.0.0
 urllib3==1.21.1
+watson-developer-cloud==0.26.0
