--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.1
 coreschema==0.0.4
 cryptography==1.9
 Django==1.11.3
+django-cors-headers==2.1.0
 django-filter==1.0.4
 djangorestframework==3.6.3
 enum34==1.1.6
