--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cryptography==1.9
 Django==1.11.3
 django-cors-headers==2.1.0
 django-filter==1.0.4
+django-rest-swagger==2.1.2
 djangorestframework==3.6.3
 enum34==1.1.6
 idna==2.5
@@ -16,12 +17,14 @@ itypes==1.1.0
 Jinja2==2.9.6
 Markdown==2.6.8
 MarkupSafe==1.0
+openapi-codec==1.3.1
 pycparser==2.18
 Pygments==2.2.0
 pyOpenSSL==17.1.0
 pysolr==3.6.0
 pytz==2017.2
 requests==2.18.1
+simplejson==3.11.1
 six==1.10.0
 uritemplate==3.0.0
 urllib3==1.21.1
